Whitespace fix, and ensure use of double quotes instead of single quotes on content properties for consistency.

--- a/themes/experience-engine/assets/styles/components/navigation/primary-nav.css
+++ b/themes/experience-engine/assets/styles/components/navigation/primary-nav.css
@@ -88,7 +88,7 @@
 
 		&:before {
 			background-color: var(--brand-primary);
-			content: '';
+			content: "";
 			height: 100%;
 			left: 0;
 			max-height: 25px;
