--- a/themes/experience-engine/assets/styles/components/section/section-header.css
+++ b/themes/experience-engine/assets/styles/components/section/section-header.css
@@ -12,7 +12,7 @@
 
 	&:after {
 		background-color: var(--global-silver-chalice);
-		content: '';
+		content: "";
 		height: 1px;
 		left: 0;
 		position: absolute;
